Fixed website background image from clipping

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: black;
   background-image: url(terrorpics/road.jpg);
-  background-position: fixed !important;
+  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   height: 100vh;
   margin: auto;
   width: 70%;
@@ -92,8 +92,8 @@ li a:hover {
 .links a {
   font-size: 25px;
   text-decoration: none;
-  color: #fff; /* Set the initial color to white */
-  transition: color 0.3s ease; /* Smooth color transition */
+  color: #fff;
+  transition: color 0.3s ease;
 }
 
 .links a:hover {
